src/objects/Milestone1_Project__c.object
<CustomObject>
    <description>AstrumPM - A solar installation project.  A project can have many milestones.</description>
    <fields>
        <fullName>Astrum_Office__c</fullName>
        <formula>TEXT(Sales_Order__r.OpportunityId__r.Property__r.Astrum_Office__c)</formula>
        <label>Astrum Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benchmark_Completion_Date__c</fullName>
        <formula>Sale_Date__c  + 90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benchmark Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Changed_By_Sales__c</fullName>
        <description>Has The Sales Order For This Project Been Changed By Sales?</description>
        <formula>IF( Sales_Order__r.Changed_By_Sales__c,&apos;YES&apos;,&apos;NO&apos;)</formula>
        <inlineHelpText>Has The Sales Order For This Project Been Changed By Sales?</inlineHelpText>
        <label>Changed By Sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constellation_Lease_Inverters__c</fullName>
        <description>LEASE ONLY - How Many Constellation Lease Inverters Does This System Require</description>
        <formula>IF (Sales_Order__r.Financing_Type__c  == &apos;Lease&apos;,   Sales_Order__r.Constellation_Lease_Inverters__c  , &apos;0&apos;)</formula>
        <inlineHelpText>LEASE ONLY - How Many Constellation Lease Inverters Does This System Require</inlineHelpText>
        <label>Constellation Lease Inverters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constellation_Tranche__c</fullName>
        <description>Tranche Number for Constellation Leases</description>
        <inlineHelpText>Tranche Number for Constellation Leases</inlineHelpText>
        <label>Constellation Tranche</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contacted_PL_For_Missing_Paperwork__c</fullName>
        <description>GRANTS ONLY - Date PL Was Contacted For Missing Paperwork</description>
        <inlineHelpText>GRANTS ONLY - Date PL Was Contacted For Missing Paperwork</inlineHelpText>
        <label>Contacted PL For Missing Paperwork</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>The date by which the project is scheduled to be completed by.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A general description of the project.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drivers_License_GC__c</fullName>
        <description>GRANTS ONLY - Driver&apos;s License(s) Grants Confirmed</description>
        <inlineHelpText>GRANTS ONLY - Driver&apos;s License(s) Grants Confirmed</inlineHelpText>
        <label>Drivers License GC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Deadline__c - Kickoff__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between Kickoff and Deadline.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enphase_Activation_GC__c</fullName>
        <description>GRANTS ONLY - Enphase Activation Grants Confirmed</description>
        <inlineHelpText>GRANTS ONLY - Enphase Activation Grants Confirmed</inlineHelpText>
        <label>Enphase Activation GC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Utility_Interconnect_GC__c</fullName>
        <description>GRANTS ONLY - Final Utility Interconnect Grants Confirmed</description>
        <inlineHelpText>GRANTS ONLY - Final Utility Interconnect Grants Confirmed</inlineHelpText>
        <label>Final Utility Interconnect GC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Utility_Interconnect_GC__c</fullName>
        <description>GRANTS ONLY - First Utility Interconnect Grants Confirmed</description>
        <inlineHelpText>GRANTS ONLY - First Utility Interconnect Grants Confirmed</inlineHelpText>
        <label>First Utility Interconnect GC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GoogleGanntUrl__c</fullName>
        <inlineHelpText>Calculated.</inlineHelpText>
        <label>GoogleGanntUrl</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Submission_GC__c</fullName>
        <description>GRANTS ONLY - Grant Submission Grants Confirmed</description>
        <inlineHelpText>GRANTS ONLY - Grant Submission Grants Confirmed</inlineHelpText>
        <label>Grant Submission GC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grants_Notes__c</fullName>
        <description>GRANTS ONLY - Notes</description>
        <inlineHelpText>GRANTS ONLY - Notes</inlineHelpText>
        <label>Grants Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <description>Date This Project was Inspected</description>
        <inlineHelpText>Date This Project was Inspected</inlineHelpText>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Work_Complete__c</fullName>
        <description>Are PANELS, ELECTRICAL, or BOTH tasks complete?</description>
        <inlineHelpText>Are PANELS, ELECTRICAL, or BOTH tasks complete?</inlineHelpText>
        <label>Install Work Complete</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Completion_Date__c</fullName>
        <description>Date This Installation Was Completed</description>
        <inlineHelpText>Date This Installation Was Completed</inlineHelpText>
        <label>Installation Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Photos_GC__c</fullName>
        <description>GRANTS ONLY - Installation Photos Grants Confirmed</description>
        <inlineHelpText>GRANTS ONLY - Installation Photos Grants Confirmed</inlineHelpText>
        <label>Installation Photos GC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Start_Date__c</fullName>
        <description>Date the Installation Started</description>
        <inlineHelpText>Date the Installation Started</inlineHelpText>
        <label>Installation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <description>Accounting Job Id</description>
        <formula>Sales_Order__r.Job_Id__c</formula>
        <inlineHelpText>Accounting Job Id</inlineHelpText>
        <label>Job Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <inlineHelpText>What date should this project start?</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>The Original Lead Source on This Project&apos;s Opportunity</description>
        <formula>TEXT(Sales_Order__r.OpportunityId__r.Lead_Source_Detail__c)</formula>
        <inlineHelpText>The Original Lead Source on This Project&apos;s Opportunity</inlineHelpText>
        <label>Lead Source Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_CEG_10_Invoice_Submitted__c</fullName>
        <description>LEASE ONLY - 10% Invoice Submitted to CEG</description>
        <inlineHelpText>LEASE ONLY - 10% Invoice Submitted to CEG</inlineHelpText>
        <label>Lease CEG 10% Invoice Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_CEG_30_Invoice_Submitted__c</fullName>
        <description>LEASE ONLY - 30% Invoice Submitted to CEG</description>
        <inlineHelpText>LEASE ONLY - 30% Invoice Submitted to CEG</inlineHelpText>
        <label>Lease CEG 30% Invoice Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_CEG_60_Invoice_Submitted__c</fullName>
        <description>LEASE ONLY - 10% Invoice Submitted to CEG</description>
        <inlineHelpText>LEASE ONLY - 10% Invoice Submitted to CEG</inlineHelpText>
        <label>Lease CEG 60% Invoice Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Homeowner_Paid_In_Full_Date__c</fullName>
        <description>LEASE ONLY - Paid in Full Date for Homeowner Deposit Paid in Full</description>
        <inlineHelpText>LEASE ONLY - Paid in Full Date for Homeowner Deposit Paid in Full</inlineHelpText>
        <label>Lease Homeowner Paid In Full Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Project_Milestone_Due_Date__c</fullName>
        <inlineHelpText>Calculated as the next incomplete task with a due date in this project. This includes sub-milestones.</inlineHelpText>
        <label>Next Project Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Project_Top_Milestone_Due_Date__c</fullName>
        <inlineHelpText>The next incomplete milestone due date. This does not include sub-milestones.</inlineHelpText>
        <label>Next Project Top Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notice_of_Grant_Award_GC__c</fullName>
        <description>Grants ONLY - Date of Notification That the Grant was Awarded</description>
        <inlineHelpText>Grants ONLY - Date of Notification That the Grant was Awarded</inlineHelpText>
        <label>Notice of Grant Award GC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Milestones__c</fullName>
        <inlineHelpText>Calculated sum of the number of incomplete milestones assigned to this project. This includes sub-milestones in the project.</inlineHelpText>
        <label>Number of Incomplete Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Top_Milestones__c</fullName>
        <inlineHelpText>The number of incomplete milestones that are in this project. This does not count sub-milestones.</inlineHelpText>
        <label>Number of Incomplete Top Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <description>Opportunity Close Date</description>
        <formula>Sales_Order__r.OpportunityId__r.CloseDate</formula>
        <inlineHelpText>Opportunity Close Date</inlineHelpText>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PL_Strikes__c</fullName>
        <description>GRANTS ONLY - &quot;Strikes&quot; for Missing Paperwork</description>
        <inlineHelpText>GRANTS ONLY - &quot;Strikes&quot; for Missing Paperwork</inlineHelpText>
        <label>PL Strikes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_In_Full_Date__c</fullName>
        <description>Date When Customer PAID IN FULL (entered by Accounting)</description>
        <inlineHelpText>Date When Customer PAID IN FULL (entered by Accounting)</inlineHelpText>
        <label>Paid In Full Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permits_GC__c</fullName>
        <description>GRANTS ONLY - Permits Grants Confirmed</description>
        <inlineHelpText>GRANTS ONLY - Permits Grants Confirmed</inlineHelpText>
        <label>Permits GC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <description>Project Notes and Comments</description>
        <inlineHelpText>Project Notes and Comments</inlineHelpText>
        <label>Project Notes</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proof_of_Inspection_GC__c</fullName>
        <description>GRANTS ONLY - Proof of Inspection Grants Confirmed</description>
        <inlineHelpText>GRANTS ONLY - Proof of Inspection Grants Confirmed</inlineHelpText>
        <label>Proof of Inspection GC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_City_State__c</fullName>
        <description>City and State of This Project&apos;s Property</description>
        <formula>Sales_Order__r.System_Design_Quote__r.System_Design__r.Property__r.Property_City__c +&apos;, &apos;+ TEXT(Sales_Order__r.System_Design_Quote__r.System_Design__r.Property__r.Property_State__c)</formula>
        <inlineHelpText>City and State of This Project&apos;s Property</inlineHelpText>
        <label>Property City/State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+Sales_Order__r.OpportunityId__r.Property__r.Id  ,  Sales_Order__r.OpportunityId__r.Property__r.Name  )</formula>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <formula>Sales_Order__r.OpportunityId__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Sales Order For This Project Was Changed By Sales After Approval</description>
        <inlineHelpText>The Sales Order For This Project Was Changed By Sales After Approval</inlineHelpText>
        <label>Sales Order Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>SCRB_SalesOrder__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Numbers_GC__c</fullName>
        <description>GRANTS ONLY - Serial Numbers Grants Confirmed</description>
        <inlineHelpText>GRANTS ONLY - Serial Numbers Grants Confirmed</inlineHelpText>
        <label>Serial Numbers GC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Parts_Required__c</fullName>
        <description>Are Special Parts Required On This Project?</description>
        <formula>IF(Sales_Order__r.System_Design_Quote__r.System_Design__r.Number_of_Arrays_With_Special_Parts__c &gt;0,&apos;YES&apos;,&apos;NO&apos;)</formula>
        <inlineHelpText>Are Special Parts Required On This Project?</inlineHelpText>
        <label>Special Parts Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_BudgetExpenseSummary__c</fullName>
        <formula>IF( Total_Expense_Budget__c &gt; 0,
IMAGE(
&quot;http://chart.apis.google.com/chart?chtt=Task+Expense+Budget+Analysis&amp;&quot; &amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(Total_Expense_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(Total_Expense_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(Total_Expense_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(Total_Expense_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( Total_Expense_Budget__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( Total_Expense_Budget_from_Milestones__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( Total_Expense_Estimate__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  Total_Expense_Incurred__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100) 
, &quot;Project Expense - Budget, Planned, Estimated, Incurred&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_BudgetMiletoneEstimate__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?chtt=Task+Time+Budget+Analysis&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(Total_Hours_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(Total_Hours_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(Total_Hours_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(Total_Hours_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( Total_Hours_Budget__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( Total_Hours_Budget_from_Milestones__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( Total_Hours_Estimate__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  Total_Hours_Incurred__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_HoursSummary__c</fullName>
        <formula>IF( Total_Hours_Budget__c &gt; 0, 
IMAGE(Status_BudgetMiletoneEstimate__c, &quot;Hours Summary: Budgeted, Planned, Estimated and Incurred.&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary (chart)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_OpenVComplete__c</fullName>
        <formula>IF( Status_TasksOpenComplete__c != &apos;&apos;,
IMAGE( Status_TasksOpenComplete__c , &quot;Open vs. Complete Tasks&quot;) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks (chart)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Img_OpenLateBlocked__c</fullName>
        <formula>IMAGE( Status_TasksOpenBlockedLate__c , &quot;Open, Late &amp; Blocked Tasks.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks (chart)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_TasksOpenBlockedLate__c</fullName>
        <formula>IF(max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) &gt; 0 , 
&quot;http://chart.apis.google.com/chart?chtt=Open+Task+Analysis&amp;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ))&amp;&quot;&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322&amp;chdl=&quot;&amp;
&quot;Open (&quot; &amp; TEXT(Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Late (&quot; &amp; TEXT(Total_Late_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Blocked (&quot; &amp; TEXT(Total_Blocked_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp; TEXT(Total_Open_Task_Count__c / max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100)&amp;&quot;|&quot;&amp; TEXT(Total_Late_Task_Count__c/ max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100) &amp;&quot;|&quot; &amp; TEXT(Total_Blocked_Task_Count__c/ max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100), &apos;/s.gif&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_TasksOpenComplete__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?&quot;&amp;
&quot;chtt=Task+Analysis&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text(Total_Open_Task_Count__c)&amp;&quot;,&quot;&amp;Text(Total_Complete_Task_Count__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT (Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT (Total_Complete_Task_Count__c) &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The current status of the project.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Blocked_Task_Count__c</fullName>
        <inlineHelpText>How many tasks associated with this project are blocked? (Calculated)</inlineHelpText>
        <label>Total Blocked Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Complete_Task_Count__c</fullName>
        <inlineHelpText>How many complete tasks are there in this project?  (Calculated.)</inlineHelpText>
        <label>Total Complete Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget__c</fullName>
        <inlineHelpText>The total expense budget for this project.</inlineHelpText>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget_from_Milestones__c</fullName>
        <inlineHelpText>Calculated from the milestone expense budgets assigned to this project.</inlineHelpText>
        <label>Total Expense Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Estimate__c</fullName>
        <inlineHelpText>Calculated from expense estimates on all child milestones</inlineHelpText>
        <label>Total Expense Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Incurred__c</fullName>
        <inlineHelpText>Calculated from expense records related to tasks on all child milestones</inlineHelpText>
        <label>Total Expense Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget__c</fullName>
        <inlineHelpText>The total hours budget for this project.</inlineHelpText>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget_from_Milestones__c</fullName>
        <inlineHelpText>Calculated from hours budgets for milestones in this project.</inlineHelpText>
        <label>Total Hours Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Estimate__c</fullName>
        <inlineHelpText>Calculated from hours estimates on all child milestones</inlineHelpText>
        <label>Total Hours Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Incurred__c</fullName>
        <inlineHelpText>Calculated from time records related to tasks on all child milestones</inlineHelpText>
        <label>Total Hours Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Late_Task_Count__c</fullName>
        <inlineHelpText>How many tasks associated with this project are late?  (Calculated)</inlineHelpText>
        <label>Total Late Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_Task_Count__c</fullName>
        <inlineHelpText>How many open tasks are there in this project? (Calculated. Includes Late and Blocked tasks.)</inlineHelpText>
        <label>Total Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>All_AJ_Projects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Deadline__c</columns>
        <columns>Kickoff__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>Property__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Salesperson__c</columns>
        <columns>Sales_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Astrum_Office__c</field>
            <operation>contains</operation>
            <value>Annapolis Junction</value>
        </filters>
        <label>All AJ Projects</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Projects</fullName>
        <columns>Deadline__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>NAME</columns>
        <columns>Total_Blocked_Task_Count__c</columns>
        <columns>Total_Late_Task_Count__c</columns>
        <columns>Total_Open_Task_Count__c</columns>
        <columns>Property__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Salesperson__c</columns>
        <columns>Status__c</columns>
        <columns>Astrum_Office__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Kickoff_before_deadline</fullName>
        <active>false</active>
        <description>Kickoff must be less or equal than the deadline</description>
        <errorConditionFormula>NOT(ISNULL(Kickoff__c)) &amp;&amp; NOT(ISNULL(Deadline__c)) &amp;&amp; Deadline__c &lt; Kickoff__c</errorConditionFormula>
        <errorDisplayField>Kickoff__c</errorDisplayField>
        <errorMessage>Kickoff must be less or equal than the deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Expense_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Expense_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Total_Expense_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Hours_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Hours_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Total_Hours_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules>
</CustomObject>